tests/baselines/reference/parserInterfaceDeclaration5.errors.txt
==== tests/cases/compiler/parserInterfaceDeclaration5.ts (1 errors) ====
    declare interface I {
    ~~~~~~~
!!! parserInterfaceDeclaration5.ts(1,1): error TS1045: A 'declare' modifier cannot be used with an interface declaration.
    }